Added export endpoints for club users
